Kata 10.txt
Microsoft Windows [Version 10.0.19043.1466]
(c) Microsoft Corporation. All rights reserved.

C:\Users\dsoni>cd C:\Users\dsoni\Documents\Launch X

C:\Users\dsoni\Documents\Launch X>python3 open.py
Traceback (most recent call last):
  File "C:\Users\dsoni\Documents\Launch X\open.py", line 5, in <module>
    main()
  File "C:\Users\dsoni\Documents\Launch X\open.py", line 2, in main
    open("/path/to/mars.jpg")
FileNotFoundError: [Errno 2] No such file or directory: '/path/to/mars.jpg'

C:\Users\dsoni\Documents\Launch X>python3 config.py
Couldn't find the config.txt file!

C:\Users\dsoni\Documents\Launch X>python3 config.py
Traceback (most recent call last):
  File "C:\Users\dsoni\Documents\Launch X\config.py", line 9, in <module>
    main()
  File "C:\Users\dsoni\Documents\Launch X\config.py", line 3, in main
    configuration = open('config.txt')
PermissionError: [Errno 13] Permission denied: 'config.txt'

C:\Users\dsoni\Documents\Launch X>python3 config.py
Couldn't find the config.txt file!

C:\Users\dsoni\Documents\Launch X>python3 config.py
Traceback (most recent call last):
  File "C:\Users\dsoni\Documents\Launch X\config.py", line 11, in <module>
    main()
  File "C:\Users\dsoni\Documents\Launch X\config.py", line 3, in main
    configuration = open('config.txt')
PermissionError: [Errno 13] Permission denied: 'config.txt'

C:\Users\dsoni\Documents\Launch X>rm -f config.txt
'rm' is not recognized as an internal or external command,
operable program or batch file.

C:\Users\dsoni\Documents\Launch X>python
Python 3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> rm -f config.txt
  File "<stdin>", line 1
    rm -f config.txt
          ^^^^^^
SyntaxError: invalid syntax
>>> $ rm -f config.txt
  File "<stdin>", line 1
    $ rm -f config.txt
    ^
SyntaxError: invalid syntax
>>> config.py
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'config' is not defined
>>> python config.py
  File "<stdin>", line 1
    python config.py
           ^^^^^^
SyntaxError: invalid syntax
>>> python3 config.py
  File "<stdin>", line 1
    python3 config.py
            ^^^^^^
SyntaxError: invalid syntax
>>> $python3 config.py
  File "<stdin>", line 1
    $python3 config.py
    ^
SyntaxError: invalid syntax
>>> close
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'close' is not defined
>>> shutil.rmtree( 'config.txt' )
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'shutil' is not defined
>>> import shutil
>>> shutil.rmtree( 'config.txt' )
>>> config.py
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'config' is not defined
>>> rm -f config.txt
  File "<stdin>", line 1
    rm -f config.txt
          ^^^^^^
SyntaxError: invalid syntax
>>> exit()

C:\Users\dsoni\Documents\Launch X>python3 config.py
Couldn't find the config.txt file!

C:\Users\dsoni\Documents\Launch X>